--- a/trunk/eeplat/WebContent/exedo/flow/workflow.html
+++ b/trunk/eeplat/WebContent/exedo/flow/workflow.html
@@ -22,7 +22,7 @@
 				} 
 		</script>
 
-		<title>紫枫科技工作流设计器</title>
+		<title>工作流设计器</title>
 	</head>	
 	<body margin="0">
 <embed id="svgwf" src="CheckFlow2.svg" width="1000" height="700"
